--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
   "packageRules": [{
     "matchPackageNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
     "versionCompatibility": "^tc_(?<version>[^_]+)(?<compatibility>_[^@]*)(@(?<currentDigest>sha256:[a-f0-9]+))?",
-    "versioning": "semver"
+    "versioning": "semver",
+    "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
   }]
 }
