remove extract version

--- a/renovate.json
+++ b/renovate.json
@@ -5,9 +5,8 @@
   ],
   "packageRules": [{
     "matchPackageNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
-    "versionCompatibility": "(?<version>[^_]+)(?<compatibility>_[^@]*)(@(?<currentDigest>sha256:[a-f0-9]+))?",
+    "versionCompatibility": "^tc_(?<version>[^_]+)(?<compatibility>_[^@]*)(@(?<currentDigest>sha256:[a-f0-9]+))?",
     "versioning": "semver",
-    "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud",
-    "extractVersion": "(?<version>\\d+(?:\\.\\d+)+)"
+    "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
   }]
 }
