--- a/renovate.json
+++ b/renovate.json
@@ -6,7 +6,7 @@
   "packageRules": [{
     "matchPackageNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
     "extractVersion": "^tc_(?<version>[^_]+)(?<compatibility>_[^@]*)(@(?<currentDigest>sha256:[a-f0-9]+))?",
-    "versioning": "semver",
+    "versioning": "loose",
     "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
   }]
 }
