--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - firmware:/teddycloud/data/firmware
       - cache:/teddycloud/data/cache
     restart: unless-stopped
+  teddycloud2:
+    image: ghcr.io/toniebox-reverse-engineering/teddycloud:tc_v0.6.0  
 volumes:
   certs:
   config:
