--- a/renovate.json
+++ b/renovate.json
@@ -3,10 +3,11 @@
   "extends": [
     "local>P1tt187/renovate-config"
   ],
-  "packageRules": [{
-    "matchPackageNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
-    "versionCompatibility": "^tc_(?<version>[^_]+)(?<compatibility>_[^@]*)?(@(?<currentDigest>sha256:[a-f0-9]+))?",
-    "versioning": "loose",
-    "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
-  }]
+  "packageRules": [ {
+       "matchDepNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
+       "versionCompatibility": "^tc_(?<version>[^_@]+)(_(?<compatibility>[^@]*))?(@(?<currentDigest>sha256:[a-f0-9]+))?",
+       "versioning": "semver",
+       "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
+    }
+]
 }
