--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,7 @@
   ],
   "packageRules": [ {
        "matchDepNames":["ghcr.io/toniebox-reverse-engineering/teddycloud"],
-       "versionCompatibility": "^tc_(?<version>[^_@]+)(_(?<compatibility>[^@]*))?(@(?<currentDigest>sha256:[a-f0-9]+))?",
+       "versionCompatibility": "tc_(?<version>[^_@]+)(_(?<compatibility>[^@]*))?(@(?<currentDigest>sha256:[a-f0-9]+))?",
        "versioning": "semver",
        "sourceUrl": "https://github.com/toniebox-reverse-engineering/teddycloud"
     }
