--- a/renovate.json
+++ b/renovate.json
@@ -25,7 +25,7 @@
           ".+\\.ya?ml$"
        ],
        "matchStrings": [
-          "#\\s*renovate: datasource=(?<datasource>.*?) ( versioning=(?<versioning>.*?))?\\s.*?image\\s*:\\s*(\"|')?(?<depName>.*?):(?<currentValue>.*)(\"|')?"
+          "\\s*#\\s*renovate: datasource=(?<datasource>.*?) ( versioning=(?<versioning>.*?))?\\s.*?image\\s*:\\s*(\"|')?(?<depName>.*?):(?<currentValue>.*)(\"|')?"
        ],
        "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{/if}}"
     }
