--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: teddycloud-sa
       containers:
       - name: teddycloud
-        # renovate: datasource=docker
+        # renovate: 
         image: ghcr.io/toniebox-reverse-engineering/teddycloud:tc_v0.6.0
         ports:
         # Uncomment the following as needed:
